@@ -2,60 +2,57 @@ package com.project.it_job.service.imp;
 
 import com.project.it_job.dto.JobLevelDTO;
 import com.project.it_job.entity.JobLevel;
+import com.project.it_job.exception.NotFoundIdExceptionHandler;
 import com.project.it_job.mapper.JobLevelMapper;
 import com.project.it_job.repository.JobLevelRepository;
+import com.project.it_job.request.JobLevelRequest;
 import com.project.it_job.service.JobLevelService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class JobLevelServiceImp implements JobLevelService {
+
     @Autowired
     private JobLevelRepository jobLevelRepository;
-    @Autowired
-    private JobLevelMapper jobLevelMapper;
 
     @Override
     public List<JobLevelDTO> getAll() {
         return jobLevelRepository.findAll()
                 .stream()
-                .map(jobLevelMapper::toDTO)
-                .toList();
+                .map(JobLevelMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public Optional<JobLevelDTO> getById(int id) {
-        return jobLevelRepository.findById(id)
-                .map(jobLevelMapper::toDTO);
+    public JobLevelDTO getById(int id) {
+        JobLevel jobLevel = jobLevelRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy Joblevel với ID: " + id));
+        return JobLevelMapper.toDTO(jobLevel);
     }
 
     @Override
-    public JobLevelDTO create(JobLevelDTO dto) {
-        JobLevel jobLevel = jobLevelMapper.toEntity(dto);
-        return jobLevelMapper.toDTO(jobLevelRepository.save(jobLevel));
+    public JobLevelDTO create(JobLevelRequest request){
+        JobLevel jobLevel = new JobLevel();
+        jobLevel.setName(request.getName());
+        return JobLevelMapper.toDTO(jobLevelRepository.save(jobLevel));
     }
 
     @Override
-    public JobLevelDTO update(int id, JobLevelDTO dto) {
-        Optional<JobLevel> optional = jobLevelRepository.findById(id);
-        if (optional.isPresent()) {
-            JobLevel jobLevel = optional.get();
-            jobLevel.setName(dto.getName());
-            return jobLevelMapper.toDTO(jobLevelRepository.save(jobLevel));
-        }
-        return null;
+    public JobLevelDTO update(int id, JobLevelRequest request){
+        JobLevel jobLevel = jobLevelRepository.findById(id)
+                .orElseThrow(() -> new NotFoundIdExceptionHandler("Không tìm thấy Joblevel ID: " + id));
+        jobLevel.setName(request.getName());
+        return JobLevelMapper.toDTO(jobLevelRepository.save(jobLevel));
     }
 
     @Override
-    public boolean delete(int id) {
-        Optional<JobLevel> optional = jobLevelRepository.findById(id);
-        if (optional.isPresent()) {
-            jobLevelRepository.delete(optional.get());
-            return true;
-        }
-        return false;
+    public void delete(int id) {
+        JobLevel jobLevel = jobLevelRepository.findById(id)
+                .orElseThrow(() -> new NotFoundIdExceptionHandler("Không tìm thấy Joblevel ID: " + id));
+        jobLevelRepository.delete(jobLevel);
     }
 }
